package rank;

message RankItemPacket {
	// 玩家ID 
	required uint64 user_id = 1;
	// 用于排名的分数值
	required int32 score = 2;
	// 排名 
	required uint32 rank = 3;
}

